--- a/platforms/common/scss/admin/_assignments.scss
+++ b/platforms/common/scss/admin/_assignments.scss
@@ -6,9 +6,10 @@
 
         .settings-param-wrapper {
             min-width: 100%;
-            max-height: 455px;
+            // Overflow disabled until Chrome issue fixed (see #851)
+            /*max-height: 455px;
             overflow-y: auto;
-            overflow-x: hidden;
+            overflow-x: hidden;*/
             margin: 0 -10px -10px;
         }
 
